# nirikshana

./: README.md  manage.py  pyproject.toml
apps/: utils.py
apps/articles/: apps.py  models.py  utils.py
apps/articles/migrations/: 0001_initial.py
apps/monitoring/: admin.py  api.py  models.py  urls.py  utils.py  views.py
apps/monitoring/migrations/: 0001_initial.py
nirikshana/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
scripts/: create_random_events.sh  generate_events_data.py  spatialite_sql_file_fix.sql
static/css/: search.css  search_results.css  styles.css
templates/: base.html  map.html  search.html  search_results.html
templates/components/: footer.html  header.html  map.html  search.html  sidebar.html
